k3s/kafbat/kafbat-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafbat-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web # or websecure for HTTPS
    # traefik.ingress.kubernetes.io/router.tls: "true"           # uncomment for TLS
spec:
  rules:
    - host: kafbat.dev.local # your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafbat-ui-kafka-ui # your Kafbat service name
                port:
                  number: 80 # Kafbat default port
